--- a/WebContent/Introduction/NSLab.html
+++ b/WebContent/Introduction/NSLab.html
@@ -3,52 +3,16 @@
 <head>
 <meta charset="UTF-8">
 <title>Network Security Lab</title>
+<link rel="stylesheet" href="../StyleCSS/Base.css">
+
 <style>
-	
-	.wrapper {
-		width: 1000px;
-		margin: auto;
-		posigion: relative;
-	}
-	.menu {
-		display: table;
-		list-style: none;
-		margin-left: auto;
-		margin-right: auto;
-	}
-	
-	.menu > li {
-		width: 238px;
-		float: left;
-		position: relative;
-		text-align: center;
-		font-weight: bold;
-		border-left: 1px solid #000;
-	}
-	
-	.menu > li > a {
-		color: black;
-		text-decoration: none;
-	}
-	.title {
-		text-align: center;
-	}
-	.login {
-		float: right;
-		right: 10px;
-		clear:both;
-	}
-	
-	div > h2 {
-		display: inline;
-	}
 </style>
 </head>
 <body>
 	<div class="wrapper">
 	
 		<h1 class="title">
-			<a href="index.html"> <img src="../Image/base/logo.png" alt="">
+			<a href="../index.html"> <img src="../Image/base/logo.png" alt="">
 			</a>
 		</h1>
 
@@ -61,10 +25,17 @@
 		<p style="clear: both"></p>
 
 		<ul class='menu'>
-			<li><a href="">INTRODUCTION</a></li>
-			<li><a href="">PROJECT</a></li>
-			<li><a href="">ACTIVITY</a></li>
-			<li style="border-right: 1px solid #000"><a href="">BOARD</a></li>
+			<li><a href="../Introduction/NSLab.html">INTRODUCTION</a></li>
+			<li><a href="../Project/Project.html">PROJECT</a></li>
+			<li><a href="../Activity/Institute.html">ACTIVITY</a></li>
+			<li style="border-right: 1px solid #000"><a href="../Board/Notice.html">BOARD</a></li>
+		</ul>
+		
+		<ul>
+			<li><a href="NSLab.html">NSLab</a></li>
+			<li><a href="Professor.html">Professor</a></li>
+			<li><a href="History.html">History</a></li>
+			<li><a href="Member.html">Member</a></li>
 		</ul>
 		
 	</div>
