--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -3,42 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>Network Security Lab</title>
+<link rel="stylesheet" href="StyleCSS/Base.css">
 <style>
-	
-	.wrapper {
-		width: 1000px;
-		margin: auto;
-		posigion: relative;
-	}
-	.menu {
-		display: table;
-		list-style: none;
-		margin-left: auto;
-		margin-right: auto;
-	}
-	
-	.menu > li {
-		width: 238px;
-		float: left;
-		position: relative;
-		text-align: center;
-		font-weight: bold;
-		border-left: 1px solid #000;
-	}
-	
-	.menu > li > a {
-		color: black;
-		text-decoration: none;
-	}
-	.title {
-		text-align: center;
-	}
-	.login {
-		float: right;
-		right: 10px;
-		clear:both;
-	}
-	
 	div > h2 {
 		display: inline;
 	}
@@ -62,9 +28,9 @@
 
 		<ul class='menu'>
 			<li><a href="Introduction/NSLab.html">INTRODUCTION</a></li>
-			<li><a href="">PROJECT</a></li>
-			<li><a href="">ACTIVITY</a></li>
-			<li style="border-right: 1px solid #000"><a href="">BOARD</a></li>
+			<li><a href="Project/Project.html">PROJECT</a></li>
+			<li><a href="Activity/Institute.html">ACTIVITY</a></li>
+			<li style="border-right: 1px solid #000"><a href="Board/Notice.html">BOARD</a></li>
 		</ul>
 
 		<div>
