Introduction apply ajax basic

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -27,7 +27,7 @@
 		<p style="clear: both"></p>
 
 		<ul class='menu'>
-			<li><a href="Introduction/NSLab.html">INTRODUCTION</a></li>
+			<li><a href="Introduction/Introduction.html">INTRODUCTION</a></li>
 			<li><a href="Project/Project.html">PROJECT</a></li>
 			<li><a href="Activity/Institute.html">ACTIVITY</a></li>
 			<li style="border-right: 1px solid #000"><a href="Board/Notice.html">BOARD</a></li>
