Introduction NSLab Menu 1st write

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -12,7 +12,6 @@
 </head>
 <body>
 	<div class="wrapper">
-	
 		<h1 class="title">
 			<a href="index.html"> <img src="Image/base/logo.png" alt="">
 			</a>
@@ -25,14 +24,17 @@
 			</div>
 		</div>
 		<p style="clear: both"></p>
-
-		<ul class='menu'>
+	</div>	
+	<div class="menu-box">
+		<ul class="menu">
 			<li><a href="Introduction/Introduction.html">INTRODUCTION</a></li>
 			<li><a href="Project/Project.html">PROJECT</a></li>
 			<li><a href="Activity/Institute.html">ACTIVITY</a></li>
 			<li style="border-right: 1px solid #000"><a href="Board/Notice.html">BOARD</a></li>
 		</ul>
-
+	</div>
+		
+	<div class="wrapper">
 		<div>
 			<button style="display: table;">left</button>
 			<img src=""> <img src="">
