--- a/WebContent/Introduction/History.html
+++ b/WebContent/Introduction/History.html
@@ -2,40 +2,20 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Network Security Lab</title>
-<link rel="stylesheet" href="../StyleCSS/Base.css">
-
 <style>
+	.test {
+		border-left: 1px solid #000;
+		float: right;
+		padding-left: 20px;
+		width: 800px;
+	}
 </style>
+
+
 </head>
 <body>
-	<div class="wrapper">
-	
-		<h1 class="title">
-			<a href="../index.html"><img src="../Image/base/logo.png" alt=""></a>
-		</h1>
-
-		<div style="height: 30px">
-			<div class="login">
-				<button>로그인</button>
-				<button>회원가입</button>
-			</div>
-		</div>
-		<p style="clear: both"></p>
-
-		<ul class='menu'>
-			<li><a href="../Introduction/NSLab.html">INTRODUCTION</a></li>
-			<li><a href="../Project/Project.html">PROJECT</a></li>
-			<li><a href="../Activity/Institute.html">ACTIVITY</a></li>
-			<li style="border-right: 1px solid #000"><a href="../Board/Notice.html">BOARD</a></li>
-		</ul>
-		
-		<ul>
-			<li><a href="NSLab.html">NSLab</a></li>
-			<li><a href="Professor.html">Professor</a></li>
-			<li><a href="History.html">History</a></li>
-			<li><a href="Member.html">Member</a></li>
-		</ul>
+	<div class="test">
+		<h1>History</h1>
 		
 	</div>
 </body>
