--- a/WebContent/Introduction/Introduction.html
+++ b/WebContent/Introduction/Introduction.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>Network Security Lab</title>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <link rel="stylesheet" href="../StyleCSS/Base.css">
 
 <style>
@@ -10,9 +12,9 @@
 </head>
 <body>
 	<div class="wrapper">
-	
 		<h1 class="title">
-			<a href="../index.html"><img src="../Image/base/logo.png" alt=""></a>
+			<a href="index.html"> <img src="../Image/base/logo.png" alt="">
+			</a>
 		</h1>
 
 		<div style="height: 30px">
@@ -22,14 +24,16 @@
 			</div>
 		</div>
 		<p style="clear: both"></p>
-
-		<ul class='menu'>
-			<li><a href="../Introduction/Introduction.html">INTRODUCTION</a></li>
-			<li><a href="../Project/Project.html">PROJECT</a></li>
-			<li><a href="../Activity/Institute.html">ACTIVITY</a></li>
-			<li style="border-right: 1px solid #000"><a href="../Board/Notice.html">BOARD</a></li>
+	</div>	
+	<div class="menu-box">
+		<ul class="menu">
+			<li><a href="Introduction/Introduction.html">INTRODUCTION</a></li>
+			<li><a href="Project/Project.html">PROJECT</a></li>
+			<li><a href="Activity/Institute.html">ACTIVITY</a></li>
+			<li style="border-right: 1px solid #000"><a href="Board/Notice.html">BOARD</a></li>
 		</ul>
-		
+	</div>
+	<div class="wrapper">	
 		<ul class="submenu">
 
 		</ul>
@@ -54,13 +58,20 @@
 					while (i < items.length) {
 						var item = items[i];
 						item = item.trim();
-						var tag = '<li><a href="#!'+ item + '" onclick="fetchPage(\'' + item + '\')">' + item + '</a></li>';
+						name = item.replace(".html", "");
+						var tag = '<li><a href="#!'+ name + '" onclick="fetchPage(\'' + item + '\')">' + name + '</a></li>';
 						tags = tags + tag;
 						i = i + 1;
 					}
 					document.querySelector('.submenu').innerHTML = tags;
 				})
 			});
+			
+			if(location.hash) {
+				fetchPage(location.hash.substr(2) + ".html");
+			} else {
+				fetchPage('NSLab.html');
+			}
 		</script>
 
 	</div>
