--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -59,5 +59,9 @@
 			</div>
 		</div>
 	</div>
+	
+	<script type="text/javascript">
+		history.pushState({data:data}, "Network Security Lab", name.replace(".html", ""));
+	</script>
 </body>
 </html>
